@@ -1,10 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.85 2005/03/17 18:02:34 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.86 2005/03/18 06:46:59 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
-  17 Mar 2005; Andrew Gaffney <agaffey@gentoo.org>
+  18 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Add sigunmask.c contributed by d_m (on freenode) to counteract python's
+  retarted behavior regarding threads and signals.
+
+  17 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Add 2>&1 to cmd in spawn()
 
   16 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
